style overflow fixed

--- a/src/style.css
+++ b/src/style.css
@@ -16,15 +16,18 @@
 body {
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(12, 1fr);
 }
 
 /* CSS for Menu */
 #menu {
     position: relative;
-    grid-column: 1/2;
+    grid-column: 1/6;
     grid-row: 4/10;
     margin: 0 4vw 0 0;
     border: var(--border);
@@ -33,7 +36,7 @@ body {
 }
 
 #menu-title {
-    grid-column: 1/2;
+    grid-column: 1/6;
     grid-row: 3/4;
     margin: 0 4vw 0 0;
     padding: 0.7rem 0;
@@ -45,7 +48,7 @@ body {
 }
 
 .navigation-link {
-    padding: 0.7rem 0;
+    padding: 1rem 0;
     margin: 1rem 1rem;
     display: block;
     text-align: center;
@@ -83,9 +86,21 @@ body {
     height: 2rem;
 }
 
+/*      main CSS         */
 main {
-    grid-column: 2/4;
+    grid-column: 6/20;
     grid-row: 2/12;
+}
+
+#Control {
+    /* margin: 0 4vw 0 0;
+    padding: 0.7rem 0;
+    width: 100%;
+    background-color: var(--theme-color);
+    border-top-left-radius: var(--corners);
+    text-align: center;
+    color: var(--heading-color);
+    font-size: var(--heading-size); */
 }
 
 #command-input {
@@ -98,10 +113,19 @@ main {
     grid-row: 4/10;
 }
 
+
+
+/*      navigator CSS        */
 #navigator-container {
     grid-column: 1/4;
     grid-row: 1;
     font-size: 4rem;
     opacity: 40%;
     font-weight: bold;
+}
+
+/*      counter CSS      */
+#counter {
+    /* grid-column: 3;
+    grid-row: 10/11; */
 }
